
Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Store sepa message id and sepa payment info id
* Add support for Python 3.10
* Remove support for Python 3.6
* Rename generate_message button to sepa_generate_message

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Rename mandate and message states from canceled to cancelled

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Merge sepa identifier into eu_at_02
* Allow to customize message_id
* Include bank account number on mandate rec_name
* Allow sepa_mandate to be set on draft payments

Version 5.4.0 - 2019-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add initiator identifiers on journal
* Allow to store SEPA message content on the file system

Version 5.2.0 - 2019-05-06
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove unique constraint on SEPA identifier

Version 5.0.0 - 2018-10-01
--------------------------
* Bug fixes (see mercurial logs for details)