@@ -23,4 +23,5 @@ def register():
         module='account_payment_sepa', type_='wizard')
     Pool.register(
         payment.MandateReport,
+        payment.MessageReport,
         module='account_payment_sepa', type_='report')
