@@ -1,3 +1,4 @@
+* Allow messages to be downloaded at once
 
 Version 7.4.0 - 2024-11-04
 --------------------------
